k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aurora
  labels:
    app: aurora
    env: production
